...
      logOut: 'Log Out',
      keepAccount: 'Keep Account',
      submit: 'Submit',
      back: 'Back',
      next: 'Next',
      gotIt: 'Got it',
      skipTour: 'Skip tour',
      planToday: 'Plan Today',
      addTask: 'Add Task',
      addMoreTasks: 'Add More Tasks',
    },
    confirmation: {
      deleteDescription: 'Are you sure you want to delete:',
...
    morning: 'Good morning',
    afternoon: 'Good afternoon',
    evening: 'Good evening',
  },
  categories: {
    system: {
      work: 'Work',
      personal: 'Personal',
      wellness: 'Wellness',
      home: 'Home',
    },
  },
  auth: {
...
